# My_Warehouse_Project

./: README.md
my_warehouse_project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_warehouse_project/install/barcode_box_creation/lib/barcode_box_creation/: camera_launch.py  prod_box.py
my_warehouse_project/install/barcode_box_creation/share/barcode_box_creation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_warehouse_project/install/barcode_stand_reader/lib/barcode_stand_reader/: camera_cv2
my_warehouse_project/install/barcode_stand_reader/share/barcode_stand_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_warehouse_project/install/my_conveyorbelt/share/my_conveyorbelt/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_warehouse_project/install/my_warehouse_bringup2/share/my_warehouse_bringup2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_warehouse_project/log/: latest_build
my_warehouse_project/src/barcode_box_creation/: CMakeLists.txt  package.xml
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/: barcode_product_list.csv  main.py
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/1324335372569/: 1324335372569.config
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/1324335372569/materials/scripts/: 1324335372569.material
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/3653089861860/: 3653089861860.config
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/5934027885625/: 5934027885625.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/5934027885625/materials/scripts/: 5934027885625.material
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/6447659382117/: 6447659382117.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/7849269835138/: 7849269835138.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/8522057232544/: 8522057232544.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/8575520152138/: 8575520152138.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/9821091809851/: 9821091809851.config  9821091809851.sdf
my_warehouse_project/src/barcode_box_creation/barcode_box_creation/models/9821091809851/materials/scripts/: 9821091809851.material
my_warehouse_project/src/barcode_stand_reader/: package.xml  setup.cfg  setup.py
my_warehouse_project/src/barcode_stand_reader/barcode_stand_reader/: barcode_product_list.csv
my_warehouse_project/src/my_conveyorbelt/: CMakeLists.txt
my_warehouse_project/src/my_conveyorbelt/launch/: conveyorbelt.launch.py
my_warehouse_project/src/my_conveyorbelt/worlds/: conveyorbeltt.world
my_warehouse_project/src/my_warehouse_bringup2/: CMakeLists.txt  package.xml
my_warehouse_project/src/my_warehouse_bringup2/launch/: my_warehouse_gazebo.launch.xml
my_warehouse_project/src/warehouse_camera/: CMakeLists.txt
my_warehouse_project/src/warehouse_camera/urdf/: box_model_0.sdf  camera copy.xacro  camera_stand_gazebo.xacro  common_properties1 (copy).xacro
my_warehouse_project/src/warehouse_py_pkg/: package.xml  setup.cfg  setup.py
my_warehouse_project/src/warehouse_py_pkg/warehouse_py_pkg/: testing.py
(+97 files in other folders)
