<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barcode_box_creation</name>
  <version>0.1.0</version>
  <description>A ROS2 package for generating barcodes and handling warehouse inventory tasks</description>
  <maintainer email="niteesh.nigam99@gmail.com">Niteesh Nigam</maintainer>
  <license>TODO: Add license here</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- External dependencies, handled via pip (add these in requirements.txt) -->
  <!-- Install with pip in the virtual environment -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

